--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,1 +1,3 @@
 <%= $player_1.name %> has attacked <%= $player_2.name %>!<br>
+<% $player_2.be_attacked%>
+<%= $player_2.name %> now has <%= $player_2.hp %>HP.
