extracts attack method into Game class

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,5 @@
 <%= $player_1.name %> vs. <%= $player_2.name %><br>
-<%= $player_2.name %>: 60HP
+<%= $player_2.name %>: <%= Player::DEFAULT_HP %>HP
 <form action="/attack" method="get">
   <input type="submit" value="ATTACK!">
 </form>
