--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,3 +1,3 @@
-<%= $player_1.name %> has attacked <%= $player_2.name %>!<br>
-<% @game.attack($player_2) %>
-<%= $player_2.name %> now has <%= $player_2.hp %>HP.
+<%= $game.player1.name %> has attacked <%= $game.player2.name %>!<br>
+<% $game.attack($game.player2) %>
+<%= $game.player2.name %> now has <%= $game.player2.hp %>HP.
