--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,6 @@
 <%= $game.player1.name %> vs. <%= $game.player2.name %><br>
-<%= $game.player2.name %>: <%= Player::DEFAULT_HP %>HP
+<%= $game.player1.name %>: <%= $game.player1.hp %>HP<br>
+<%= $game.player2.name %>: <%= $game.player2.hp %>HP
 <br>
 It is <%= $game.current_player.name %>'s turn
 <form action="/attack" method="get">
